# libinput_calibrator

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  TODO  autogen-clean.sh  autogen.sh  configure.ac
src/: Makefile.am  fbutils-linux.c  fbutils.h  hypatia.h  lc.c  lc.h  lc_common.c  testutils.c
